Task list sorting error fix, fixed missing tasks on task list - still need to check why subqueries returned multiple rows

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,11 @@ div.position > div {
  padding: 5px;
 }
 
+p#importpartsmsg img, p#importtoolsmsg img{
+ width: 30px;
+ height: 30px;
+}
+
 div.position > div:hover {
  background-color: orange;
  opacity: 0.5; 
