Updated user interface, project deleting is allowed from UI, first MMU task implementation (data import from external providers) via api

--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,10 @@ div#newtaskwindow {
 	height: 600px;
 }
 
+div#tasksettingswindow {
+	height: auto;
+}
+
 /* TODO: make responsive for small screens*/
 
 div.modalwindow > div > div:first-of-type {
