--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,7 @@
 div.menuitems > a {
  display: inline-block;
  text-align: center;
- width: calc(50% - 5px);
+ width: calc(25% - 5px);
  border-radius: 10px;
  padding: 5px;
  margin-bottom: 10px;
@@ -18,6 +18,29 @@ div.menuitems > a > i {
  display: block;
  width: 100%;
  height: 25px;
+ background-position: center center;
+ background-size: contain;
+ background-repeat: no-repeat;
+}
+
+div.menuitems > a > i.itemtask {
+ background-image: url('../ui/task4.png');
+}
+
+div.menuitems > a > i.itemproject {
+ background-image: url('../ui/nproject.png');
+}
+
+div.menuitems > a > i.itemsimulation {
+ background-image: url('../ui/mosim.png');
+}
+
+div.menuitems > a > i.mmutask {
+ background-image: url('../ui/task3.png');
+}
+
+div.menuitems > a > i.itemsettings {
+ background-image: url('../ui/settings.png');
 }
 
 .menuitems a {
@@ -36,4 +59,33 @@ div.menuitems > a:hover {
 
 div.menuitems > a > span {
  display:block;
+}
+
+/*subtasks */
+
+.w3-container.subtasks {
+    border-top: 3px solid #99bbce;
+    border-bottom: 3px solid #99bbce;
+}
+
+.w3-container.subtasks > a {
+    display: inline-block;
+    width: 50%;
+    box-sizing: border-box;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    transition: background-color 0.2s linear;
+    border-radius:5px;
+    text-decoration:none; 
+}
+
+.w3-container.subtasks > a:hover {
+ background-color: #99bbce;
+}
+
+.w3-container.subtasks > a.selected {
+ border-left: 6px solid #99bbce;
+ border-right: 6px solid #99bbce;
 }
