--- a/css/avatars.css
+++ b/css/avatars.css
@@ -1,3 +1,12 @@
+div.modalwindow {
+ height: auto;
+ min-height: 150px;
+}
+
+div.modalwindow > div {
+	padding: 10px;
+}
+
 div#avatarlist > div {
  display: inline-block;
  position: relative;
