--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,39 @@
+table.users tr {
+ position: relative;
+}
+
+table.users td:first-child > span.clicked {
+ position: absolute;
+ top: 0px;
+ left: 5px;
+ width: 50%;
+ height: 100%;
+ padding: 5px 0px 0px 10px;
+ border-radius: 5px;
+ background-color: #213864;
+ background-size: contain;
+ background-position: center center;
+ background-repeat: no-repeat;
+ text-align: left;
+ color: white;
+ border-radius: 10px;
+}
+
+table.users td:first-child > span.clicked > span {
+ margin-left: 20px;
+ padding-left: 20px;
+ padding-right: 20px;
+ border-radius: 5px;
+ padding-top: 5px;
+ padding-bottom: 5px;
+ transition: background-color 0.2s linear;
+ cursor: pointer;
+}
+
+table.users td:first-child > span.clicked > span:hover {
+ background-color: #99bbce;
+}
+
 label {
 	margin-left: 10px;
 	cursor:pointer;
