First configuration wizzard has been added

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+span.w3-tag.tagicon.tools[data-id="0"] {
+ display: none; /*hide tools for tasks that do not require them */
+}
+
 div.brackettop {
  background-position: left 3px, left bottom;
  background-repeat: no-repeat, no-repeat;
@@ -177,6 +181,10 @@ div.modalwindow > div:first-child {
 
 div#newtaskwindow {
 	height: 600px;
+}
+
+div#tasksettingswindow {
+	height: auto;
 }
 
 /* TODO: make responsive for small screens*/
